--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,11 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.home-bg{
+  background-image: url("./module/home/asset/bookstore.jpg");
+  background-position: center; /* Center the image */
+  height: 100vh;
+  background-size: cover;
+  opacity: 0.2;
+}
