--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,9 @@ input::-webkit-inner-spin-button {
 }
 
 .home-bg{
-  background-image: url("./module/home/asset/bookstore.jpg");
+  background-image:linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url("./module/home/asset/bookstore.jpg");
   background-position: center; /* Center the image */
   height: 100vh;
   background-size: cover;
-  opacity: 0.2;
+ 
 }
